generated/checkers/gen/AllGen-Misuse-ec1aae190c7729ffdd3603de311dc00f7ff988f9/build_logs/syntax-repair-07/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isFlexibleArrayCountedBy(const clang::FieldDecl*, const clang::FieldDecl*&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:151:25: error: ‘const class clang::FieldDecl’ has no member named ‘isFlexibleArrayMember’; did you mean ‘isFlexibleArrayMemberLike’?
  151 |   bool IsFlex = FlexFD->isFlexibleArrayMember() ||
      |                         ^~~~~~~~~~~~~~~~~~~~~
      |                         isFlexibleArrayMemberLike
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:158:53: error: cannot convert ‘clang::IdentifierInfo*’ to ‘const clang::FieldDecl*’ in initialization
  158 |     if (const FieldDecl *FD = CBA->getCountedByField()) {
      |                               ~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                     |
      |                                                     clang::IdentifierInfo*
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static clang::ento::ProgramStateRef {anonymous}::SAGenTestChecker::ensureOwnerCountFieldMapping(clang::ento::ProgramStateRef, const clang::ento::MemRegion*, const clang::FieldDecl*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:217:59: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::FieldDecl*> >::lookup_type’ {aka ‘const clang::FieldDecl* const*’} to ‘const clang::FieldDecl*’ in initialization
  217 |   const FieldDecl *Mapped = State->get<OwnerCountFieldMap>(OwnerReg);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
      |                                                           |
      |                                                           clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::FieldDecl*> >::lookup_type {aka const clang::FieldDecl* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:331:62: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::FieldDecl*> >::lookup_type’ {aka ‘const clang::FieldDecl* const*’} to ‘const clang::FieldDecl*’ in initialization
  331 |     const FieldDecl *CountFD = State->get<OwnerCountFieldMap>(OwnerReg);
      |                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
      |                                                              |
      |                                                              clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::FieldDecl*> >::lookup_type {aka const clang::FieldDecl* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
